samples/_failures_safe/1761696925_f0b953_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0553e871.c: In function ‘main’:
./samples/SAFE/__tmp_0553e871.c:200:5: error: expected expression at end of input
  200 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_0553e871.c:200:5: error: expected declaration or statement at end of input
